# data-ETL-pipeline

./: .gitignore  .gitmodules  ECOSYSTEM_USAGE.md  README.md  ecosystem.config.json  ecosystem.gt.config.json  ecosystem.manual_scripts.config.json  ecosystem.migration.config.json  ecosystem.normal.config.json  ecosystem.priority.config.json  priority-extract-queue-bot.json  priority-scrape-queue-bot.json  scrape-queue-bot-priority.json
core/: ABOUT.md  pyproject.toml
core/src/core/: constants.py
core/src/core/db_schemas/: api_key_bundle.schema.json  binary_ground_truth.schema.json  concept_ground_truth.schema.json  deferred_manufacturer.schema.json  extraction_error.schema.json  gpt_batch.schema.json  gpt_batch_request.schema.json  keyword_ground_truth.schema.json  manufacturer.schema.json  manufacturer_user_form.schema.json  mep_request.schema.json  place.schema.json  scraping_error.schema.json  user.schema.json  user_role_access_request.schema.json
core/src/core/dependencies/: aws_clients.py  load_core_env.py
core/src/core/models/: address_extraction_result.py  base_extraction.py  base_files.py  binary_classification_result.py  business_description_extraction_result.py  concept_extraction_results.py  deferred_basic_extraction.py  deferred_binary_classification.py  deferred_concept_extraction.py  deferred_keyword_extraction.py  deferred_search_requests.py  deferred_single_stage_extraction_requests.py  field_types.py  gpt_batch_request_blob.py  gpt_batch_response_blob.py  jsonl_batch_file.py  keyword_extraction_results.py  prompt.py  queue_item.py  search_stage_results.py  single_stage_extraction_results.py  to_extract_item.py  to_scrape_item.py
core/src/core/scripts/: binary_ground_truth.migration.py  db_seed_indices.py  db_validate_schemas.py  generate_db_schemas.py  generate_ttl_from_mfg.py  manufacturer.migration.py  scribble.py  ttlgenerator_from_model.py
core/src/core/services/: api_key_service.py  deferred_manufacturer_service.py  gpt_batch_request_queries.py  gpt_batch_request_service.py  gpt_batch_request_writes.py  gpt_batch_service.py  graph_db_manufacturer_service.py  manufacturer_service.py  out_of_vocab_labels_service.py  ttl_generator_service.py  user_service.py
core/src/core/utils/: address_util.py  batch_jsonl_file_writer.py  graph_db_client.py  mongo_client.py  send_email_util.py  str_util.py  time_util.py  ttl_generator_util.py  url_util.py
core/tests/: test_address_util.py  test_get_file_name_from_mfg_etld_unit.py  test_scraped_text_util.py  test_str_util.py  test_ttl_generator_service.py  test_url_util.py
data_etl_app/: .env  main.py  pyproject.toml  requirements.txt
data_etl_app/api/routes/: ontology.py
data_etl_app/knowledge/prompts/: summarize_is_manufacturer.txt  unknown_to_known_certificate.txt  unknown_to_known_material_cap.txt
data_etl_app/models/: binary_classifier.py  chunk_search_stats.py  extraction.py  extractor.py
data_etl_app/models/db/: binary_classifier_result.py  extraction_error.py  extraction_results.py  extraction_stats.py  manufacturer.py
data_etl_app/scripts/: demo_jsonl_splitting.py  discovered_concepts.py  runner.py  verify_jsonl_splitting.py
data_etl_app/services/: NOTES_TO_SELF.md  binary_classifier.py  extractor.py  llm_search_service.py  map_unknown_to_known_service.py  ontology_service.py  redis_key_pool.py
data_etl_app/src/: main.py
data_etl_app/src/api/: deps.py
data_etl_app/src/api/routes/: ontology.py
data_etl_app/src/data_etl_app/: main.py
data_etl_app/src/data_etl_app/bots/: batch_file_satellite.py  batch_file_station.py  extract_queue_bot.py  gt_extract_queue_bot.py  new_extract_queue_bot.py
data_etl_app/src/data_etl_app/dependencies/: aws_clients.py  aws_deps.py  load_data_etl_env.py
data_etl_app/src/data_etl_app/models/: binary_classification.py  binary_ground_truth.py  chunk_search_stats.py  chunking_strat.py  concept_extraction_results.py  deferred_binary_classification.py  deferred_concept_extraction.py  deferred_keyword_extraction.py  generic_extraction_results.py  keyword_extraction_results.py  keyword_ground_truth.py  ontology.py  skos_concept.py  types.py  types_and_enums.py
data_etl_app/src/data_etl_app/scripts/: backfill_mfg_user_form_ontology_version.py  extract.py  (+4 more)
data_etl_app/src/models/: chunk_search_stats.py
data_etl_app/src/scripts/: discovered_concepts.py  runner.py
data_etl_app/src/services/: binary_classifier_service.py  brute_search_service.py  extract_concept_service.py  is_manufacturer_service.py  llm_search_service.py  map_unknown_to_known_service.py  ontology_service.py
data_etl_app/src/utils/: chunk_util.py  rdf_to_knowledge.py
data_etl_app/tests/: README.md  conftest.py
data_etl_app/tests/test_routes/: test_rdf_validation_route.py
data_etl_app/tests/test_services/: test_rdf_validation_service.py
data_etl_app/tests/test_utils/: test_byte_chunking.py  test_chunk_util.py  test_lat_lng_util.py
data_etl_app/utils/: chunk_util.py  key_util.py  mongo_client.py  s3_util.py
litellm_proxy_app/: pyproject.toml
litellm_proxy_app/src/litellm_proxy_app/: __init__.py
open_ai_key_app/: .env  ABOUT.md  Dockerfile  pyproject.toml
open_ai_key_app/models/: gpt_model.py
open_ai_key_app/redis_infra/: redis.conf
open_ai_key_app/seeds/: openai_key_seed.py
open_ai_key_app/services/: openai_keypool.py
open_ai_key_app/src/models/: keyslot.py
open_ai_key_app/src/services/: openai_keypool.py
open_ai_key_app/src/utils/: ask_gpt.py  redis_client.py  redis_key_manager.py
open_ai_key_app/utils/: redis_key_manager.py
scraper_app/: pyproject.toml  test_redirect_protection.py
scraper_app/src/scraper_app/: main.py
scraper_app/tests/: COMPREHENSIVE_FINAL_RESULTS.md  conftest.py  run_chrome_tests.py  test_chrome_driver_manager.py  test_chrome_process_management.py  test_dedup_util.py  test_redirect_protection.py  test_social_media_blocking.py
shared/: ABOUT.md  pyproject.toml
shared/src/shared/: __init__.py  main.py
shared/tests/: test_get_file_name_from_mfg_etld_unit.py  test_password_util.py  test_scraped_text_util.py  test_url_util.py
(+334 files in other folders)
