# core/pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core"                                                    # the name your team will pip-install
version = "0.1.0"
description = "Contains common code like AWS utils and services"
readme = "ABOUT.md"                                              # or point to a common README if you like
requires-python = ">=3.12"


# Any dependencies that more than one app share :
# (not necessarily all apps just to keep every app aligned on dependencies)
dependencies = [
  "pydantic>=2.10.0",         # Data validation
  "pydantic_settings>=1.0.0", # For settings management
  "typing_extensions>=4.0.0", # For type hints in Python 3.9+
  "pytest>=7.0.0",            # Testing framework
  "pytest-asyncio>=0.20.0",   # Async testing support

  "python-dotenv>=1.1.0",      # For loading environment variables from .env files
  "fastapi>=0.116.0",          # Modern, fast web framework for building APIs
  "uvicorn[standard]>=0.30.0", # ASGI server for FastAPI
  "sendgrid>=6.9.0",

  "beanie>=2.0.0,<3.0.0", # ODM for MongoDB (2.x line)
  "pymongo>=4.5,<5.0",    # AsyncMongoClient is here

  "aiobotocore>=2.18.0,<2.19.0",
  "types-aiobotocore-s3>=2.18.0,<2.19.0",
  "types-aiobotocore-sqs>=2.18.0,<2.19.0",
  "tldextract>=3.4.0",                     # For extracting domain names
  "gunicorn>=20.1.0",                      # WSGI server for running Python web applications

  "redis>=4.2.0,<5.0", # Async Redis client
  "openai>=1.0.0",     # Add the version you need
  "tiktoken>=0.5.0",   # Add the version you need

  "psutil>=5.9.0",
  "pytest-cov>=3.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
# Set line length
line-length = 100

# Exclude directories
exclude = [".git", "__pycache__", ".venv", "venv", ".pytest_cache"]

[tool.ruff.lint]
# Enable specific rules
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "B",      # flake8-bugbear (includes B006)
  "RUF012", # Mutable class attributes should be annotated with `ClassVar`
]

# Ignore specific rules if needed
ignore = []
