# data_etl_app/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_etl_app"                                # name of your FastAPI app package
version = "0.1.0"
description = "FastAPI‐powered data ETL application"
# readme = "../../README.md"                           # or wherever you want to point
requires-python = ">=3.8"

# Runtime dependencies for your app
dependencies = [
  "fastapi>=0.95.0",           # or whichever version you need
  "uvicorn[standard]>=0.23.0", # for running the server
  # Tell pip that aws-service is also a dependency:
  # "aws-service @ file://localhost/${CWD}/aws-service#egg=aws-service-0.1.0",
  # ^ This means: “install aws-service from that path as version 0.1.0”
]

[tool.setuptools.packages.find]
where = ["."]
