# data_etl_app/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_etl_app"                                                            # name of your FastAPI app package
version = "0.1.0"
description = "Data ETL application with FastAPI wrapper and standalone scripts"
# readme = "../../README.md"                           # or wherever you want to point
requires-python = ">=3.12"

# Runtime dependencies for your app
dependencies = [
  "aiofiles>=23.1.0", # Async file operations

  "rdflib>=7.0.0", # RDF library

  # Tell pip that open_ai_key_app and shared are also dependencies:
  "open_ai_key_app>=0.1.0",
  # ^ This means: “install open_ai_key_app from that path as version 0.1.0”
  "shared>=0.1.0",
]
