# litellm_proxy_app/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm_proxy_app"
version = "0.1.0"
description = "LiteLLM Proxy client utilities and provider-agnostic model registry"
requires-python = ">=3.12"

dependencies = [
    "litellm[proxy]>=1.40",
    "openai>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "prisma>=0.11.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
