# open_ai_key_app/pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open_ai_key_app"                                 # the name your team will pip-install
version = "0.1.0"
description = "Service Module for OpenAI Key Management"
readme = "ABOUT.md"                                      # or point to a common README if you like
requires-python = ">=3.12"

# Any dependencies that your common code needs:
dependencies = [
    "types-redis>=4.0.0", # For Redis type hints
    "shared>=0.1.0",
]
